--- a/main.html
+++ b/main.html
@@ -36,6 +36,34 @@
 
 <script>
 //Your code goes here 
+	
+const items = document.querySelector('.items');
+let isMouseDown = false;
+let startX;
+let scrollLeft;
+
+items.addEventListener('mousedown', (e) => {
+  isMouseDown = true;
+  startX = e.pageX - items.offsetLeft;
+  scrollLeft = items.scrollLeft;
+});
+
+items.addEventListener('mouseup', () => {
+  isMouseDown = false;
+});
+
+items.addEventListener('mouseleave', () => {
+  isMouseDown = false;
+});
+
+items.addEventListener('mousemove', (e) => {
+  if (!isMouseDown) return;
+  e.preventDefault();
+  const x = e.pageX - items.offsetLeft;
+  const walk = (x - startX) * 2; // Adjust the scrolling speed
+  items.scrollLeft = scrollLeft - walk;
+})
+
 </script>
 
   </body>
